--- a/config/database.yml
+++ b/config/database.yml
@@ -83,20 +83,4 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: bitcoin_wallet_production
-    username: bitcoin_wallet
-    password: <%= ENV["BITCOIN_WALLET_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: bitcoin_wallet_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: bitcoin_wallet_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: bitcoin_wallet_production_cable
-    migrations_paths: db/cable_migrate
+  url: <%= ENV["DATABASE_URL"] %>
